Fix: parallax content and menu content overlap issue on mobile devices

--- a/src/app/home/components/home-header/home-header.component.css
+++ b/src/app/home/components/home-header/home-header.component.css
@@ -264,9 +264,6 @@
 }
 
 /* mobile menu */
-.mobile-banner .parallax-front {
-  z-index: 0;
-}
 
 .mobile-menu {
   display: flex;
@@ -283,7 +280,7 @@
 
 .mobile-icon {
   position: absolute;
-  z-index: 9999;
+  z-index: 999;
   top: 5px;
   padding-right: 10px;
   right: 0;
@@ -297,8 +294,9 @@
   width: 100%;
   height: 100%;
   min-height: 200vh;
-  z-index: 999;
+  z-index: 99;
   overflow-y: auto;
+  opacity: 1;
 }
 
 .mobile-nav-links {
